--- a/time-tracker/index.html
+++ b/time-tracker/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Czas Pracy</title>
+    <title>Forrent Czas Pracy</title>
 
     <script
       src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
