--- a/time-tracker/index.html
+++ b/time-tracker/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forrent Czas Pracy</title>
+    <meta name="description" content="Forrent Czas Pracy" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo192.png" sizes="192x192" />
+    <link rel="mask-icon" href="/logo192.png" color="#FFFFFF" />
+    <meta name="theme-color" content="#ffff" />
+
+    <meta charset="UTF-8" />
 
     <script
       src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
