--- a/time-tracker/index.html
+++ b/time-tracker/index.html
@@ -9,6 +9,13 @@
     <link rel="mask-icon" href="/logo192.png" color="#FFFFFF" />
     <meta name="theme-color" content="#ffff" />
 
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <meta charset="UTF-8" />
 
     <script
