--- a/time-tracker/index.html
+++ b/time-tracker/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forrent Czas Pracy</title>
-    <meta name="description" content="Forrent Czas Pracy" />
+    <meta name="description" content="Aplikacja do śledzenia czasu pracy Forrent" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png" sizes="192x192" />
     <link rel="mask-icon" href="/logo192.png" color="#FFFFFF" />
-    <meta name="theme-color" content="#ffff" />
+    <meta name="theme-color" content="#ffffff" />
 
     <meta
       http-equiv="Cache-Control"
@@ -15,8 +16,6 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-
-    <meta charset="UTF-8" />
 
     <script
       src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
@@ -44,6 +43,7 @@
     />
   </head>
   <body>
+    <a href="#main-content" class="skip-link" style="position: absolute; left: -10000px; top: auto; width: 1px; height: 1px; overflow: hidden; z-index: 9999; padding: 8px; background: #000; color: #fff; text-decoration: none;" onfocus="this.style.left='10px'; this.style.width='auto'; this.style.height='auto';" onblur="this.style.left='-10000px'; this.style.width='1px'; this.style.height='1px';">Przejdź do głównej treści</a>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
