Refactor code for improved readability and maintainability across multiple components

--- a/time-tracker/index.html
+++ b/time-tracker/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forrent Czas Pracy</title>
-    <meta name="description" content="Aplikacja do śledzenia czasu pracy Forrent" />
+    <meta
+      name="description"
+      content="Aplikacja do śledzenia czasu pracy Forrent"
+    />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png" sizes="192x192" />
     <link rel="mask-icon" href="/logo192.png" color="#FFFFFF" />
@@ -43,7 +46,26 @@
     />
   </head>
   <body>
-    <a href="#main-content" class="skip-link" style="position: absolute; left: -10000px; top: auto; width: 1px; height: 1px; overflow: hidden; z-index: 9999; padding: 8px; background: #000; color: #fff; text-decoration: none;" onfocus="this.style.left='10px'; this.style.width='auto'; this.style.height='auto';" onblur="this.style.left='-10000px'; this.style.width='1px'; this.style.height='1px';">Przejdź do głównej treści</a>
+    <a
+      href="#main-content"
+      class="skip-link"
+      style="
+        position: absolute;
+        left: -10000px;
+        top: auto;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+        z-index: 9999;
+        padding: 8px;
+        background: #000;
+        color: #fff;
+        text-decoration: none;
+      "
+      onfocus="this.style.left='10px'; this.style.width='auto'; this.style.height='auto';"
+      onblur="this.style.left='-10000px'; this.style.width='1px'; this.style.height='1px';"
+      >Przejdź do głównej treści</a
+    >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
